--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.2.0",
+    "nodemon": "^3.1.9",
     "uuid": "^8.3.2",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
-    "start": "node app.js"
+    "start": "node app.js",
+    "dev": "nodemon app.js"
   },
   "eslintConfig": {
     "extends": [
